--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.9.5"
   }
 }
