--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^1.7.11",
     "@sendgrid/mail": "^7.7.0",
     "firebase": "^9.10.0",
+    "framer-motion": "^9.1.1",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.2",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
