--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "@headlessui/react": "^1.7.11",
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.3.4",
     "firebase": "^9.10.0",
     "framer-motion": "^9.1.1",
     "moment": "^2.29.4",
